<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/paleorange"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:id="@+id/about_app_logo"
            android:src="@drawable/ic_logo_orange_shadowed"
            android:layout_marginTop="14dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_app_version"
            android:id="@+id/about_app_version"
            android:layout_marginTop="18dp"
            android:layout_alignTop="@+id/about_app_logo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_app_date"
            android:textStyle="italic"
            android:id="@+id/about_app_date"
            android:layout_below="@+id/about_app_version"
            android:layout_alignRight="@+id/about_app_version"
            android:layout_alignEnd="@+id/about_app_version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_app_developer_name"
            android:id="@+id/about_app_developer"
            android:layout_below="@+id/about_app_date"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="204dp"
            android:id="@+id/about_app_photo"
            android:src="@drawable/ic_tavoo_photo"
            android:layout_below="@+id/about_app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/about_photo_border"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_app_photo_description_text"
            android:id="@+id/about_app_photo_description"
            android:textStyle="italic"
            android:layout_below="@+id/about_app_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_app_description_text"
            android:id="@+id/about_app_description"
            android:layout_below="@+id/about_app_photo_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"/>
    </RelativeLayout>
</ScrollView>