<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/vet_sec_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/vet_sec_item_call_button"
        android:layout_toStartOf="@+id/vet_sec_item_call_button"
        android:singleLine="true"
        android:text="@string/vet_sec_name_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/vet_sec_item_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vet_sec_item_name"
        android:layout_alignStart="@+id/vet_sec_item_name"
        android:layout_below="@+id/vet_sec_item_name"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:layout_toLeftOf="@+id/vet_sec_item_call_button"
        android:layout_toStartOf="@+id/vet_sec_item_call_button"
        android:singleLine="true"
        android:text="@string/vet_sec_address_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/vet_sec_item_call_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/vet_sec_item_name"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/vet_sec_item_call_button_placeholder"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_vet_phone_button" />
</RelativeLayout>